@startuml

class Component  #eaecee {
	+ std::string name () const
	+ double massFlow () const
	+ double rotationalSpeed () const

	+ void setName (const std::string& name ) const
	+ void setMassFlow (const double& massFlow ) const
	+ void setRotationalSpeed(const double& rotationalSpeed) const

	+ std::function<void()> onChangedCallbak()
}

class ComponentList  #eaecee {
	+ size_t numberOfComponents() const;
	+ Component* getComponent (const int number) const
	+ Component* getComponent (const std::string& name) const

	+ bool addComponent (const std::string& name);
	+ bool deleteComponent (const std::string& name);

	+ std::function<void(const std::string&)> onComponentAddedCallbak()
	+ std::function<void(const std::string&)> onComponentRemovedCallbak()
}

ComponentList "1" *-- "many" Component

class ApplicationModel #abebc6 {
	+ size_t numberOfComponents() const
	+ Component* getComponent (const int number) const
	+ Component* getComponent (const std::string& name) const
	+ bool addComponent (const std::string& name)
	+ bool deleteComponent (const std::string& name)

	+ void initialize()

	+Q_SIGNAL componentAdded(const QString& name)
	+Q_SIGNAL componentDeleted(const QString& name)

	-ComponentList components
}

ApplicationModel -|> QObject
ApplicationModel "1" *-- "1" ComponentList

class ApplicationViewModel #fcf3cf {
	+ void addComponentRequest(const QString& name)
	+ void deleteComponentRequest(const QString& name)
	+ void selectComponentRequest(const QString& name)

	+ ComponentListModel* getComponents() const
	+ ComponentViewModel* getSelectedComponent() const
	+ void setSelectedComponent(ComponentViewModel*)

	+ Q_SIGNAL selectedComponentChanged(ComponentViewModel*)

	- void onComponentAdded(const QString& name)
	- void onComponentDeleted(const QString& name)
	- void onComponentSeleted(const QString& name)

	- ComponentListModel* components
	- ComponentViewModel* selectedComponent
	- ApplicationModel* ApplicationModel
}

ApplicationViewModel -|> QObject
ApplicationViewModel "1" *-- "1" ApplicationModel
ApplicationViewModel "1" *-- "1" ComponentListModel
ApplicationViewModel "1" *-- "1" ComponentViewModel
ComponentListModel -|> QAbstractListModel

class ComponentListModel #abebc6 {

}

abstract class QAbstractListModel #abebc6 {
}

class QObject #abebc6{

}

QAbstractListModel -|> QObject

class ComponentViewModel #fcf3cf {
	+ void setName()
	+ void setMassFlow()
	+ void setRotationalSpeed()

	+ QString getName() const
	+ double getMassFlow() const
	+ double getRotationalSpeed() const

	+ Q_SIFNAL nameChanged(QString)
	+ Q_SIFNAL massFlowChanged(double)
	+ Q_SIFNAL rotationalSpeedChanged(double)

	- Component* component
}

ComponentViewModel "1" o-- "1" Component
ComponentViewModel -|> QObject

class ApplicationView  #f6ddcc {
	ApplicationViewModel* applicationViewModel
}

ApplicationView -|> QWidget
ApplicationView "1" o-- "1"  ApplicationViewModel

class ComponentView  #f6ddcc {
	ComponentViewModel* selectedComponent
}

ComponentView -|> QWidget
ComponentView "1" o-- "1" ComponentViewModel
ApplicationView --> ComponentView

class QWidget #f6ddcc {

}

@enduml
